# rauschi

./: README.md  pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/routes/: drinks.rs  mod.rs  parties.rs  user.rs
api/src/services/: drink_manager.rs  mod.rs  party_manager.rs  user_manager.rs
api/src/services/user_management/: bonsai_db_user_manager.rs  in_memory_user_manager.rs  mod.rs
api/src/types/: db_schema.rs  drinks.rs  geo.rs  mod.rs  parties.rs  users.rs
app/: .metadata  pubspec.yaml
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/api/: network.dart
app/lib/api/model/: party.dart  user.dart
app/lib/pages/: drink_selection.dart  login.dart
app/lib/repositories/: location_repository.dart  party_repository.dart  user_repository.dart
app/lib/services/: authentication_service.dart  location_service.dart
app/lib/widgets/: card.dart
app/lib/widgets/login/: login_form.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: add_drink_button.dart  card.dart  drink.dart  drink_selection.dart  drunken_status.dart  greeter.dart  login.dart  main.dart  user_state.dart  user_stats.dart
linux/: my_application.cc
(+23 files in other folders)
