[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["uuid", "json"] }
serde = "1.0.127"
serde_json = "1.0.78"
json_str = "0.5.2"
thiserror = "1.0.30"
h3ron = { version = "0.14.0", features = ["use-serde"]}
geo-types = "0.7.6"
rand = "0.8.5"
base64 = "0.13.0"
chrono = "0.4.19"

[dev-dependencies]
tokio = "1.17.0"
tokio-test = "0.4.2"
chrono = "0.4.19"
